fix photoswipe close on mobile and change photo on create event modal

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -851,7 +851,7 @@ button:focus {
     height: 100%;
     top: 0;
     left: 0;
-    background: url(../Content/img/background/1_large.jpg) no-repeat center;
+    background: url(../Content/img/background/1_medium.jpg) no-repeat center;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
